--- a/odoo-custom-addons/fibernet/views/cron_data.xml
+++ b/odoo-custom-addons/fibernet/views/cron_data.xml
@@ -26,6 +26,34 @@
             <field name="nextcall" eval="(DateTime.now() + timedelta(minutes=5)).strftime('%Y-%m-%d %H:%M:%S')"/>
             <field name="doall" eval="False"/>
         </record>
+
+        <record forcecreate="True" id="ir_cron_run_installation_date_check" model="ir.cron">
+            <field name="name">Run Installation Date Check</field>
+            <field name="model_id" ref="model_kin_ticket"/>
+            <field name="state">code</field>
+            <field name="code">model.run_installation_date_check()</field>
+            <field name="user_id" ref="base.user_root"/>
+            <field name="interval_number">1</field>
+            <field name="interval_type">days</field>
+            <field name="numbercall">-1</field>
+            <field name="nextcall" eval="(DateTime.now() + timedelta(days=1)).strftime('%Y-%m-%d %H:%M:%S')"/>
+            <field name="doall" eval="False"/>
+        </record>
+
+        <record forcecreate="True" id="ir_cron_run_escalate_installation_date_check" model="ir.cron">
+            <field name="name">Run Installation Failed Date Check</field>
+            <field name="model_id" ref="model_kin_ticket"/>
+            <field name="state">code</field>
+            <field name="code">model.run_escalate_installation_date_check()</field>
+            <field name="user_id" ref="base.user_root"/>
+            <field name="interval_number">1</field>
+            <field name="interval_type">days</field>
+            <field name="numbercall">-1</field>
+            <field name="nextcall" eval="(DateTime.now() + timedelta(days=1)).strftime('%Y-%m-%d %H:%M:%S')"/>
+            <field name="doall" eval="False"/>
+        </record>
+
+
     </data>
 </odoo>
 
