--- a/odoo-custom-addons/fibernet/views/cron_data.xml
+++ b/odoo-custom-addons/fibernet/views/cron_data.xml
@@ -36,7 +36,20 @@
             <field name="interval_number">1</field>
             <field name="interval_type">days</field>
             <field name="numbercall">-1</field>
-            <field name="nextcall" eval="(DateTime.now() + timedelta(days=1)).strftime('%Y-%m-%d %H:%M:%S')"/>
+            <field name="nextcall" eval="(DateTime.now() + timedelta(days=1)).strftime('%Y-%m-%d 11:00:00')"/>
+            <field name="doall" eval="False"/>
+        </record>
+
+         <record forcecreate="True" id="ir_cron_run_installation_date_today_check" model="ir.cron">
+            <field name="name">Run Installation Date Check Today</field>
+            <field name="model_id" ref="model_kin_ticket"/>
+            <field name="state">code</field>
+            <field name="code">model.run_installation_date_today_check()</field>
+            <field name="user_id" ref="base.user_root"/>
+            <field name="interval_number">1</field>
+            <field name="interval_type">days</field>
+            <field name="numbercall">-1</field>
+            <field name="nextcall" eval="(DateTime.now() + timedelta(days=1)).strftime('%Y-%m-%d 06:00:00')"/>
             <field name="doall" eval="False"/>
         </record>
 
