--- a/odoo-custom-addons/fibernet/views/ticket_view.xml
+++ b/odoo-custom-addons/fibernet/views/ticket_view.xml
@@ -304,6 +304,7 @@
             <field name="arch" type="xml">
                 <filter name="company" position="after" >
                     <filter string="Installation Date" name="grpInstDate" context="{'group_by':'installation_date:day'}"/>
+                    <filter string="Area" name="grpCustArea" context="{'group_by':'area_customer_id'}"/>
                 </filter>
 
             </field>
@@ -313,7 +314,7 @@
             <field name="res_model">kin.ticket</field>
             <field name="name">Scheduled Installation Tickets</field>
             <field name="view_mode">tree,form,pivot,graph</field>
-            <field name="context">{'search_default_grpInstDate': 1 }</field>
+            <field name="context">{'search_default_grpInstDate': 1,'search_default_grpCustArea': 1 }</field>
               <field name="domain">[('category_code', '=', 'installation'),('state','in',['new','progress'])]</field>
             <field name="help" type="html">
                 <p>
