--- a/odoo-custom-addons/kin_loading/views/loading_view.xml
+++ b/odoo-custom-addons/kin_loading/views/loading_view.xml
@@ -56,9 +56,9 @@
                         <button name="action_confirm" type="object" states="draft" string="Confirm" class="oe_highlight" groups="kin_loading.group_depot_officer" />
                          <button name="action_line_mgr_approve" type="object" states="confirm" string="Line Manager Approve" class="oe_highlight" groups="kin_loading.group_programme_approver" />
                         <button name="action_approve" type="object" states="line_approve" string="Depot Manager Approve" class="oe_highlight" groups="kin_loading.group_depot_manager" />
-                        <button name="%(action_disapproval_reason)d" type="action" states="confirm" string="Dis-Approve" groups="kin_loading.group_depot_manager" />
-                        <button name="action_cancel" states="confirm,approve" type="object" string="Cancel" confirm="Are you sure you want to Cancel the Loading Programme?"/>
-                        <button name="action_draft" states="confirm,approve,cancel" type="object" string="Reset to Draft" confirm="Are you sure you want to Reset the Loading Programme?" />
+                        <button name="%(action_disapproval_reason)d" type="action" states="line_approve,approve" string="Dis-Approve" groups="kin_loading.group_depot_manager" />
+                        <button name="action_cancel" states="draft" type="object" string="Cancel" confirm="Are you sure you want to Cancel the Loading Programme?"/>
+                        <button name="action_draft" states="confirm,cancel" type="object" string="Reset to Draft" confirm="Are you sure you want to Reset the Loading Programme?" />
                         <button name="btn_loading_programme_excel_export"  type="object" states="approve" string="Export Loading Programme in Excel"  class="oe_highlight" groups="kin_loading.group_show_excel_export_lp_button" />
                         <button name="btn_loading_programme_pdf_export"  type="object" states="approve" string="Export Loading Programme in PDF"  class="oe_highlight" groups="kin_loading.group_show_pdf_export_lp_button" />
                         <field name="state" widget="statusbar"  />
