--- a/odoo-custom-addons/taurus/views/loading.xml
+++ b/odoo-custom-addons/taurus/views/loading.xml
@@ -2,8 +2,8 @@
 <odoo>
     <data>
 
-        <menuitem id="menu_sales_atl" name="Sales/ATL Report" parent="kin_loading.menu_dispatch_operation" sequence="1" action="action_sales_atl_wizard"  />
-        <menuitem id="menu_sales_atl_report" name="Sales/ATL Report" parent="sale.menu_sale_report" sequence="2" action="action_sales_atl_wizard"  />
+        <menuitem id="menu_sales_atl" name="Sales Release Dispatch Report" parent="kin_loading.menu_dispatch_operation" sequence="1" action="action_sales_atl_wizard"  />
+        <menuitem id="menu_sales_atl_report" name="Sales Release Dispatch Report" parent="sale.menu_sale_report" sequence="2" action="action_sales_atl_wizard"  />
         <menuitem id="kin_loading.menu_sale_order_other"
             name="Retail Sales Orders"
             action="kin_loading.action_orders_other"
@@ -104,12 +104,12 @@
             </field>
          </record>
 
-         <record id="account.menu_action_account_payments_receivable" model="ir.ui.menu" >
-            <field name="name" >Customer's Receipts</field>
-        </record>
-         <record id="account.action_account_payments" model="ir.actions.act_window">
-            <field name="name" >Customer's Receipts</field>
-         </record>
+<!--         <record id="account.menu_action_account_payments_receivable" model="ir.ui.menu" >-->
+<!--            <field name="name" >Customer's Receipts</field>-->
+<!--        </record>-->
+<!--         <record id="account.action_account_payments" model="ir.actions.act_window">-->
+<!--            <field name="name" >Customer's Receipts</field>-->
+<!--         </record>-->
 
 
 
