--- a/odoo-custom-addons/fibernet/views/contract.xml
+++ b/odoo-custom-addons/fibernet/views/contract.xml
@@ -15,6 +15,17 @@
                         <attribute name="invisible" >1</attribute>
                 </button>
 
+                <div class="oe_button_box" name="button_box" position="inside" >
+                    <button name="action_view_ticket"
+                            type="object"
+                            class="oe_stat_button"
+                            icon="fa-pencil-square-o"
+                            attrs="{'invisible': [('ticket_count', '=', 0)]}" >
+                        <field  name="ticket_count" widget="statinfo" string="Ticket" />
+                    </button>
+                </div>
+
+
                 <field name="recurring_next_date" position="after" >
                         <field name="next_due_date" readonly="1" force_save="1" />
                 </field>
