--- a/odoo-custom-addons/fibernet/views/res_config_settings_views.xml
+++ b/odoo-custom-addons/fibernet/views/res_config_settings_views.xml
@@ -24,6 +24,58 @@
                                 </div>
                             </div>
 
+                           <div class="col-12 col-lg-6 o_setting_box"  title="Cable Cost">
+                                <div class="o_setting_left_pane" />
+                                <div class="o_setting_right_pane">
+                                    <span class="o_form_label">Cable Cost</span>
+                                    <span class="fa fa-lg fa-building-o" title="The cost of the cable used in installation or support" />
+                                    <div class="text-muted">
+                                        The cost of the cable used in installation or support
+                                    </div>
+                                    <div class="content-group">
+                                        <div class="row mt16">
+                                            <label for="cable_cost" class="col-lg-3 o_light_label"/>
+                                            <field name="cable_cost" />
+                                        </div>
+                                    </div>
+                                </div>
+                          </div>
+
+
+                        <div class="col-12 col-lg-6 o_setting_box" >
+                                <div class="o_setting_left_pane" />
+                                <div class="o_setting_right_pane">
+                                    <span class="o_form_label">Mobilized Installation Cost</span>
+                                    <span class="fa fa-lg fa-building-o" title="Mobilized Installation Cost for Installation and Support Tickets" />
+                                    <div class="text-muted">
+                                        Mobilized Installation Cost for Installation and Support Tickets
+                                    </div>
+                                    <div class="content-group">
+                                        <div class="mt16">
+                                            <field name="installation_cost_mobilized" />
+                                        </div>
+                                    </div>
+
+                                </div>
+                          </div>
+
+                        <div class="col-12 col-lg-6 o_setting_box" >
+                                <div class="o_setting_left_pane" />
+                                <div class="o_setting_right_pane">
+                                    <span class="o_form_label">Not Mobilized Installation Cost</span>
+                                    <span class="fa fa-lg fa-building-o" title="Not Mobilized Installation Cost for Installation and Support Tickets" />
+                                    <div class="text-muted">
+                                        Not Mobilized Installation Cost for Installation and Support Tickets
+                                    </div>
+                                    <div>
+                                        <div class="mt16">
+                                            <field name="installation_cost_not_mobilized" />
+                                        </div>
+                                    </div>
+                                </div>
+                          </div>
+
+
                     </div>
                 </div>
                 </div>
