--- a/odoo-custom-addons/wifiber/wizard/create_payment_entry.xml
+++ b/odoo-custom-addons/wifiber/wizard/create_payment_entry.xml
@@ -6,7 +6,7 @@
             <field name="name">Create Payment Wizard</field>
             <field name="model">create.payment.wizard</field>
             <field name="arch" type="xml">
-                <form string="Create Payment">
+                <form string="Create Payment"  >
                     <p>Please the following information to post the payment received from the customer</p>
                     <group>
                         <group col="2" >
@@ -17,13 +17,14 @@
                             <field name="amount_balance"  readonly="1" />
                         </group>
                     </group>
-                    <group col="4">
-                        <field name="journal_id"  domain="[('type','in',['cash','bank'])]"   options="{'no_create': True, 'no_open': True}" attrs="{'required': [('is_paid_deferred', '=', 'paid')], 'invisible': [('is_paid_deferred', '!=', 'paid')]}" />
-                        <field  name="payment_date" attrs="{'required': [('is_paid_deferred', '=', 'paid')], 'invisible': [('is_paid_deferred', '!=', 'paid')]}" />
-                        <field name="amount" attrs="{'required': [('is_paid_deferred', '=', 'paid')], 'invisible': [('is_paid_deferred', '!=', 'paid')]}" />
-                        <field name="ref"  attrs="{'required': [('is_paid_deferred', '=', 'paid')], 'invisible': [('is_paid_deferred', '!=', 'paid')]}" />
+                    <group col="4"   >
+                        <field name="journal_id"  domain="[('type','in',['cash','bank'])]"   options="{'no_create': True, 'no_open': True}" attrs="{'readonly': [('is_eservice_approved', '=', True)], 'required': [('is_paid_deferred', '=', 'paid')], 'invisible': [('is_paid_deferred', '!=', 'paid')]}" />
+                        <field  name="payment_date" attrs="{'readonly': [('is_eservice_approved', '=', True)], 'required': [('is_paid_deferred', '=', 'paid')], 'invisible': [('is_paid_deferred', '!=', 'paid')]}" />
+                        <field name="amount" attrs="{'readonly': [('is_eservice_approved', '=', True)], 'required': [('is_paid_deferred', '=', 'paid')], 'invisible': [('is_paid_deferred', '!=', 'paid')]}" />
+                        <field name="ref"  attrs="{'readonly': [('is_eservice_approved', '=', True)], 'required': [('is_paid_deferred', '=', 'paid')], 'invisible': [('is_paid_deferred', '!=', 'paid')]}" />
                         <field name="is_send_receipt" readonly="1" attrs="{'invisible': [('is_paid_deferred', '!=', 'paid')]}" />
                         <field name="partner_id" invisible="1" />
+                        <field name="is_eservice_approved" invisible="1" />
                     </group>
                     <footer>
                         <button name="action_create_payment" string="Approve" type="object" class="oe_highlight"/>
