--- a/odoo-custom-addons/taurus/report/report_deliveryslip.xml
+++ b/odoo-custom-addons/taurus/report/report_deliveryslip.xml
@@ -130,8 +130,8 @@
                                         <th class="border border-dark p-3" >PRODUCT</th>
                                         <td class="border border-dark p-3" >
                                             <span t-field="move.product_id"/>
-                                            <span t-field="move.product_uom_qty"/>
-                                            <span t-field="move.product_uom"/>
+<!--                                            <span t-field="move.product_uom_qty"/>-->
+<!--                                            <span t-field="move.product_uom"/>-->
                                             <p t-if="move.description_picking != move.product_id.name">
                                                 <span t-field="move.description_picking"/>
                                             </p>
